[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gnss-denied-visual-inertial-localization"
version = "0.1.0"
description = "Reproducible GNSS-denied visual-inertial localization simulation with EKF fusion."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=2.0",
  "pillow>=10.0"
]

[project.scripts]
gnss-denied-vio = "gnss_denied_vio.simulate:main"

[tool.setuptools.packages.find]
where = ["src"]

