<?xml version="1.0"?>
<package format="3">
  <name>gnss_denied_vio_cpp</name>
  <version>0.1.0</version>
  <description>Optional ROS2 C++ wrapper for GNSS-denied visual-inertial localization.</description>
  <maintainer email="demo@example.com">GNSS Denied VIO Demo</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>Eigen3</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

